Fix overflow-y in filelist

--- a/app/public/css/tell.css
+++ b/app/public/css/tell.css
@@ -113,6 +113,7 @@ input[readonly] {
 
 #files {
   height:250px;
+  overflow-y: auto;
 }
 
 #hideReceive {
